<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="3"
        android:icon="@drawable/ic_delete_white"
        android:title="@string/delete_all_contacts"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="2"
        android:icon="@drawable/ic_edit_white"
        android:title="@string/delete_contact"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_call"
        android:orderInCategory="1"
        android:icon="@drawable/ic_call_white"
        android:title="@string/ic_call"
        app:showAsAction="ifRoom" />

</menu>