<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:padding="5dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tvNameContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_toStartOf="@+id/imgCallContact"
            android:layout_toLeftOf="@+id/imgCallContact"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:singleLine="true"
            tools:text="PAPAYEE" />

        <ImageView
            android:id="@+id/imgCallContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toStartOf="@+id/imgInfoContact"
            android:layout_toLeftOf="@+id/imgInfoContact"
            android:contentDescription="@string/image_call_contact"
            android:src="@drawable/ic_call_green" />

        <ImageView
            android:id="@+id/imgInfoContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:layout_toStartOf="@+id/imgDeleteContact"
            android:layout_toLeftOf="@+id/imgDeleteContact"
            android:contentDescription="@string/image_info_contact"
            android:src="@drawable/ic_info_bue" />

        <ImageView
            android:id="@+id/imgDeleteContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:contentDescription="@string/image_delete_contact"
            android:src="@drawable/ic_delete_red" />

    </RelativeLayout>
</RelativeLayout>